Fix for absolute width on mobile intro container

--- a/app/public/layout.module.css
+++ b/app/public/layout.module.css
@@ -191,6 +191,7 @@
     /* right: 10vw; */
     /* width: 80vw; */
     /* height: 50vh; */
+    width: auto;
     border: none;
     padding: 2rem;
   }
